<resources>
    <string name="app_name" translatable="false">Crypto Watcher</string>

    <string name="prefs_key_fingerprint_as_auth" translatable="false">prefs_key_use_fingerprint_as_auth</string>
    <string name="local_currency_default_value" translatable="false">USD</string>
    <string name="prefs_key_local_currency" translatable="false">prefs_key_local_currency</string>
    <string name="contentdesc_drawer_open">Open drawer</string>
    <string name="contentdesc_drawer_close">Close drawer</string>

    <string name="perm_contacts_rationale">\"Accessing contacts let\'s Crypto Watcher personalize your application\"</string>
    <string name="title_balance">Balance</string>
    <string name="title_cashout">Cashout</string>
    <string name="empty_indicator_balance">Add coins to your wallet</string>
    <string name="empty_indicator_cashout">No cashout so far…</string>
    <string name="prefs_key_auto_update" translatable="false">key_auto_update</string>

    <string name="navigation_header_default_name">A Crypto Watcher user</string>
    <string name="add_to_wallet">Add to wallet</string>
    <string name="hint_insert_coins">Insert your coins!</string>
    <string name="navigation_balance">Balance</string>
    <string name="navigation_cashout">Cashout</string>
    <string name="navigation_help">Help</string>
    <string name="navigation_settings">Settings</string>
    <string name="popup_item_cashout">Cash out</string>
    <string name="remove">Remove</string>
    <string name="error_add_currency">Please enter an amount!</string>
    <string name="label_add_currency">Add currency</string>
    <string name="hint_dialog_cashout_bigger_zero">Amount must be bigger than 0!</string>
    <string name="cashout_all">Cashout all</string>
    <string name="dialog_cashout_title">Cashout your %s</string>
    <string name="dialog_cashout_message_amount" translatable="false">0 / %f</string>
    <string name="prefs_cat_general">General</string>
    <string name="prefs_cat_currency">Currency</string>
    <string name="prefs_cat_about">About</string>
    <string name="prefs_about_developer_summary">Developer</string>
    <string name="prefs_about_developer_title" translatable="false">Shockbytes Studio © 2017 – 2018</string>
    <string name="prefs_about_version_title" translatable="false">App Version</string>
    <string name="prefs_general_auto_update_summary">Values update in fixed interval</string>
    <string name="prefs_general_auto_update_title">Auto update values</string>
    <string name="prefs_general_fingerprint_title">Unlock with Fingerprint</string>
    <string name="prefs_currency_local_title">Local currency</string>
    <string name="prefs_currency_price_provider_title">Price Provider</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="auth_lockscreen_not_enabled">Lock screen security not enabled!</string>
    <string name="auth_no_fingerprint_registered">Please register a fingerprint first!</string>
    <string name="auth_lib_error">Cannot initialize Fingerprint library!</string>
    <string name="auth_perm_rationale">This app needs to access your fingerprint.</string>
    <string name="login_summary">Keep track of your coin progress</string>
    <string name="dialog_remove_confirmation_title">Remove coins</string>
    <string name="dialog_remove_confirmation_msg">Delete %s from your wallet?</string>
    <string name="help_balance">You can add your coins with your buying price to your wallet and
        watch how the coins evolve over time. Crypto Watcher does not access your personal coin wallet,
        in order to ensure the security of your actual coins.
        \n\nCurrently we support following crypto currencies:\n
        \n\t&#8226; BTC\n\t&#8226; BCH\n\t&#8226; ETH\n\t&#8226; LTC
        \n\t&#8226; IOTA\n\t&#8226; DASH\n\t&#8226; XRP</string>
    <string name="help_cashout">When you sell your actual coins you can also cash out the coins in
        Crypto Watcher. With this feature you can keep track how much profit (hopefully) you made
        with your coins. Note, that it is not possible to sell your actual coins with this app.
        This app is just for watching the progress of your coins.</string>
    <string name="showcase_fab">Add your crypto currency with the corresponding buying price.</string>
    <string name="showcase_drawer">You can navigate between balance and cashout. You can visit help and settings here as well.</string>
    <string name="showcase_header">Here you can see your current balance. You can also see your invested money and your percentual profit.</string>
    <string name="error_add_currency_bigger_than_zero">Amount must be bigger than 0.0</string>
    <string name="dialog_set_local_currency_title">Choose your currency</string>
    <string name="ok" translatable="false">OKAY</string>
    <string name="apply">Apply</string>
    <string name="dialog_provider_selection_title">Price provider selection</string>
    <string name="prefs_key_price_provider_selection" translatable="false">prefs_key_price_provider_selection</string>
    <string name="contentdesc_item_price_provider">Item Price Provider</string>
    <string name="error_load_data">Error while loading data</string>
    <string name="enable">Enable</string>
    <string name="error_no_price_provider">No price provider selected</string>
    <string name="transition_item_currency_cardview" translatable="false">transition_item_currency_card</string>
    <string name="transition_item_currency_icon" translatable="false">transition_item_currency_icon</string>
    <string name="transition_item_currency_crypto_amount" translatable="false">transition_item_currency_crypto_amount</string>
    <string name="transition_item_currency_divider" translatable="false">transition_item_currency_divider</string>
    <string name="transition_item_currency_txt_bought_price" translatable="false">transition_item_currency_txt_bought_price</string>
    <string name="transition_item_currency_txt_current_price" translatable="false">transition_item_currency_txt_current_price</string>
    <string name="transition_item_currency_imgview_arrow" translatable="false">transition_item_currency_imgview_arrow</string>
    <string name="transition_item_currency_txt_diff" translatable="false">transition_item_currency_txt_diff</string>
    <string name="detail_price_provider">Price provided by %s</string>
    <string name="detail_bought_date">Bought: %s</string>
    <string name="detail_sold_date">Sold: %s</string>
    <string name="prefs_about_icons_title" translatable="false">Icons</string>
    <string name="prefs_about_icons_summary" translatable="false">www.iconfinder.com\nwww.flaticon.com</string>
    <string name="error_price_provider_hint">Please enable a price provider</string>

</resources>
