<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_navigation_balance"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_navigation_balance"
            android:gravity="center_vertical"
            android:text="@string/title_balance"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_balance" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="32dp"
            android:drawableLeft="@drawable/ic_navigation_cashout"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_navigation_cashout"
            android:gravity="center_vertical"
            android:text="@string/title_cashout"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_cashout" />

    </LinearLayout>

</ScrollView>