<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_currency_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:transitionName="@string/transition_item_currency_cardview">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp">

        <ImageView
            android:id="@+id/item_currency_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:transitionName="@string/transition_item_currency_icon"
            app:srcCompat="@drawable/ic_crypto_currency_btc" />

        <ImageButton
            android:id="@+id/item_currency_icon_imgbtn_overflow"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_overflow" />

        <TextView
            android:id="@+id/item_currency_txt_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_currency_icon"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="0.04 BTC"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:transitionName="@string/transition_item_currency_crypto_amount" />

        <View
            android:id="@+id/item_currency_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/item_currency_txt_amount"
            android:layout_margin="4dp"
            android:background="@android:color/white"
            android:transitionName="@string/transition_item_currency_divider" />

        <LinearLayout
            android:id="@+id/item_currency_conversion_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_currency_divider"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/item_currency_txt_bought_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="8.92€"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/controls"
                android:transitionName="@string/transition_item_currency_txt_bought_price" />

            <ImageView
                android:id="@+id/item_currency_imgview_arrow"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="0.10"
                android:transitionName="@string/transition_item_currency_imgview_arrow"
                app:srcCompat="@drawable/ic_conversion_arrow" />

            <TextView
                android:id="@+id/item_currency_txt_current_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="10€"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/controls"
                android:transitionName="@string/transition_item_currency_txt_current_price" />

        </LinearLayout>

        <TextView
            android:id="@+id/item_currency_txt_diff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_currency_conversion_container"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="+2%"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/percentage_win"
            android:transitionName="@string/transition_item_currency_txt_diff" />


    </RelativeLayout>

</android.support.v7.widget.CardView>
